# personal-backend-service

./: .gitignore  .terraform.lock.hcl  Makefile  Pipfile  README.md  api_gateway.tf  cleanup.zsh  create_lambda.zsh  dynamodb.tf  iam.tf  lambda.tf  locals.tf  main.py  main.tf  outputs.tf  package-lock.json  package.json  pyproject.toml  pytest.ini  s3.tf  serverless.yml  sonar-project.properties  terraform.tf  variables.tf
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  pycodestyle.yml  pytest.yml  sonarqube.yml  workflow.yml
app/: __init__.py  api_handler.py  auth.py  config.py  deps.py  exceptions.py  http_handler.py  jwt_bearer.py  main.py  middleware.py  middlewares.py  settings.py  utils.py
app/api/: decorators.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: posts.py
app/api/v1/: api.py  router.py
app/api/v1/posts/: models.py  router.py  service.py
app/api/v1/routers/: attachments_router.py  posts.py  posts_router.py
app/api/v1/routes/: posts.py
app/models/: auth.py  cache.py  camel_model.py  meta.py  post.py  response.py
app/repositories/: meta.py  meta_repository.py  post.py  post_repository.py
app/repository/: post.py
app/schemas/: attachment_schema.py  post.py  post_schema.py
app/services/: attachment_service.py  cache.py  cache_service.py  post.py  post_service.py  publisher_service.py  storage_service.py
tests/: app_test.py  conftest.py
tests/helpers/: utils.py
tests/integration/: conftest.py  test_attachments_api.py  test_posts_api.py
tests/service/: cache_service_test.py  post_service_test.py
tests/unit/: app_test.py  auth_test.py  conftest.py  test_app.py  test_auth.py
tests/unit/repository/: test_post_repository.py
tests/unit/service/: cache_service_test.py  post_service_test.py  test_attachment_service.py  test_cache_service.py  test_post_service.py  test_publisher_service.py  test_storage_service.py
utils/: coverage.py
