[project]
name = "personal-backend-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.22",
    "boto3-stubs[essential]>=1.38.22",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "mangum>=0.19.0",
    "markdown>=3.7",
    "pendulum>=3.1.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "python-slugify>=8.0.4",
    "sshfs>=2025.2.0",
    "ujson>=5.10.0",
    "unidecode>=1.4.0",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "aws-lambda-powertools[validation]>=3.13.0",
    "bandit>=1.8.3",
    "black>=25.1.0",
    "faker>=37.3.0",
    "isort>=6.0.1",
    "moto>=5.0.28",
    "mypy>=1.15.0",
    "pycodestyle>=2.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "respx>=0.22.0",
]

[tool.black]
target-version = ["py313"]

[tool.ruff]
target-version = "py313"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
